# swish-protobuf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  protobuf.ss  protoc-gen-scheme  scheme_generator.cc  swish_options.proto
generator/: descriptor_pb.ss  generator.ss  plugin_pb.ss
test/: Makefile  any_pb.ss  build-protobuf  conformance-scheme  conformance.ss  conformance_pb.ss  duration_pb.ss  failure_list_scheme.txt  field_mask_pb.ss  get-protobuf  protobuf.ms  rebuild-protos  smoke.ss  struct_pb.ss  test-scheme  test_messages_proto2_pb.ss  test_messages_proto3_pb.ss  test_options.proto  test_options_pb.ss  timestamp_pb.ss  wrappers_pb.ss
